--- a/public/stylesheets/parts/_calc.scss
+++ b/public/stylesheets/parts/_calc.scss
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Baloo+2:400,700&display=swap&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap');
 @import './breakepoints';
 
 .wrapper {
     width: 800px;
     margin: 25px auto 0;
-    background: rgba(173, 216, 230, 0.74);
+    background: #c2e59c;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, rgba(100, 179, 244, 0.8), rgba(194, 229, 156, 0.8));
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, rgba(100, 179, 244, 0.8), rgba(194, 229, 156, 0.8));
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     padding: 20px;
     border: 3px solid black;
     box-shadow: 4px 4px black;
@@ -18,6 +24,9 @@
         left: 50%;
         transform: translateX(-50%);
         margin: 0 auto;
+        box-shadow: none;
+        border: 1px solid black;
+        border-radius: 10px;
     }
 
     &__title {
@@ -41,8 +50,12 @@
     }
 
     h3 {
+        font-family: 'Metal Mania', cursive;
         text-align: center;
-        color: #830707;
+        color: #4148ae;
+        text-shadow: 1px 1px rgb(213, 232, 194);
+
+
     }
 
     input {
@@ -276,5 +289,69 @@
                 color: green;
             }
         }
+    }
+
+    .show-calc-wear {
+        margin: 10px 0px;
+    }
+
+    .calc-wear {
+        display: none;
+        flex-direction: column;
+        position: fixed;
+        width: 500px;
+        background-color: bisque;
+        padding: 15px;
+        box-shadow: -1px 2px 8px aliceblue;
+        // animation: showCalcWear 1s linear both;
+
+        @include mq(xsmall) {
+            max-width: 300px;
+        }
+
+        &__hide {
+            max-width: 30px;
+            font-size: 20px;
+            color: #1f5e68;
+            align-self: flex-end;
+            cursor: pointer;
+        }
+
+        &__btn {
+            width: 100px;
+        }
+
+        &__score {
+            color: cadetblue;
+
+            @include mq(xsmall) {
+                text-align: center;
+            }
+
+            span {
+                color: #2b4a0d;
+                font-weight: bolder;
+
+
+                @include mq(xsmall) {
+                    display: block;
+                    padding-top: 6px;
+                }
+            }
+        }
+    }
+}
+
+@keyframes showCalcWear {
+    0% {
+        transform: scale(0);
+    }
+
+    75% {
+        transform: scale(1.1);
+    }
+
+    100% {
+        transform: scale(1);
     }
 }
