--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -13,14 +13,20 @@ body {
     padding: 50px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
     // up świąteczny 
-    background: url('../images/spring.jpg');
+    background: url('../images/bora.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
 
     @include mq('xsmall') {
-        background: linear-gradient(red, blue);
+        background: #f46b45;
+        /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #eea849, #f46b45);
+        /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #eea849, #f46b45);
+        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     }
 
     .logout-btn {
