--- a/views/panel.pug
+++ b/views/panel.pug
@@ -13,7 +13,7 @@ block content
     .calc-wear
       div(class="calc-wear__hide")
         i(class="fas fa-minus-circle")
-      p(class="calc-wear__par") Podaj dane wprost z faktury (w kWh), program poda Ci zużycie roczne w mWh.
+      p(class="calc-wear__par") Podaj dane wprost z faktury (w kWh), program poda Ci zużycie roczne w mWh. Kalkulator zakłada, że mamy do czynienia z fakturą miesięczną. W wypadku dwumiesięcznej podziel wynik na 2.
       div
         label I strefa:
         input(class="calc-wear__input calc-wear__input--first-sphere" value=0)
