--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,4 @@
+@import url(/home/ten/projekty/cc-panel/node_modules/normalize.css/normalize.css);
 @import url("https://fonts.googleapis.com/css?family=Baloo+2:400,700&display=swap&subset=latin-ext");
 @import url("https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Anton&display=swap&subset=latin-ext");
@@ -130,7 +131,7 @@ body div.menu-mobile img {
   border-radius: 50%;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 640px) {
   body div.menu-mobile {
     display: block;
   }
@@ -156,20 +157,26 @@ body .main-nav {
   border-radius: 10px;
 }
 
-@media (max-width: 570px) {
+@media (max-width: 640px) {
   body .main-nav {
-    top: -400px;
+    background: rgba(0, 0, 0, 0.75);
+    transform: unset;
+    min-width: 200px;
+    top: 50px;
+    left: unset;
+    right: -500px;
     transition: .3s;
   }
 }
 
 body .main-nav ul {
   display: flex;
+  justify-content: center;
   list-style: none;
   margin-bottom: 0;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 640px) {
   body .main-nav ul {
     flex-direction: column;
   }
@@ -209,11 +216,10 @@ body .main-nav ul li:nth-child(7) {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 640px) {
   body .main-nav ul li {
-    width: 260px;
+    width: auto;
     border-right: none;
-    border-bottom: 2px solid white;
   }
 }
 
@@ -221,6 +227,7 @@ body .main-nav ul li a {
   text-decoration: none;
   color: white;
   font-size: 20px;
+  font-family: 'Baloo 2', cursive;
 }
 
 @media (max-width: 1024px) {
@@ -247,6 +254,12 @@ body .main-nav ul li a {
   }
 }
 
+@media (max-width: 640px) {
+  body .main-nav ul li a {
+    font-size: 20px;
+  }
+}
+
 body .main-nav ul li a:hover {
   border-bottom: 2px solid white;
 }
@@ -257,15 +270,8 @@ body .main-nav ul li a.disabled {
 }
 
 body .main-nav.show {
-  top: 0px;
-  min-width: 50vw;
-  left: 40%;
-  background: rgba(64, 57, 57, 0.89);
-}
-
-body .main-nav.show a {
-  font-size: 20px;
-  color: orange;
+  top: 50px;
+  right: 0px;
 }
 
 body .wrapper {
