--- a/public/stylesheets/parts/_login.scss
+++ b/public/stylesheets/parts/_login.scss
@@ -70,6 +70,7 @@
 
     input[type='text'],
     input[type='number'],
+    input[type='password'],
     textarea {
         font-size: 18px;
     }
