hide price edit btn -.-

--- a/public/stylesheets/parts/_calc.css
+++ b/public/stylesheets/parts/_calc.css
@@ -44,6 +44,10 @@
   }
 }
 
+.wrapper .show-price-change {
+  display: none;
+}
+
 @media (max-width: 640px) {
   .wrapper .show-price-change {
     display: none;
