--- a/public/stylesheets/parts/_calc.scss
+++ b/public/stylesheets/parts/_calc.scss
@@ -44,6 +44,8 @@
     }
 
     .show-price-change {
+        display: none;
+
         @include mq('xsmall') {
             display: none;
         }
