--- a/views/panel.pug
+++ b/views/panel.pug
@@ -4,8 +4,8 @@ block content
   form(method='post')
     button(type='submit' class='logout-btn') Wyloguj  
   div(class='wrapper')
-    h3 Ofertomat v. 3.1   
-    p(class="alert alert-success wrapper__title") Wersja 3.1 została wzbogacona o sumę oszczędności klienta i kalkulator zużyć - wpisujesz zużycia z faktury a on Ci poda roczne.   
+    h3 Ofertomat v. 3.1.1   
+    p(class="alert alert-success wrapper__title") Wersja 3.1.1 liczy '9999' od sierpnia, poprzednio był to czerwiec.   
     button(class="btn btn-dark show-price-change") Edycja cen 
     div
       button(class="btn btn-info show-calc-wear") Przelicz zużycie  
