factor 9999 update, css fix  - checkbox visible on mobile

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,12 +17,12 @@ html
           a(class="main-nav__new-link" href="/mwh")  Ile MWh?  
         li 
           a(href="/panel/table")  E-Tablica  
-        li 
-           a(href="/panel/church") E-Taca
-        li 
-           a(href="/panel/necessary") Przydatne 
-        li 
-          a(href="/panel/news")  Aktualności 
+        //- li 
+        //-    a(href="/panel/church") E-Taca
+        //- li 
+        //-    a(href="/panel/necessary") Przydatne 
+        //- li 
+        //-   a(href="/panel/news")  Aktualności 
         li 
           a(href="/stats")  Stats
     div(class='change-motive')
