begin of crm - login panel create on front

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,6 +25,8 @@ html
         //-   a(href="/panel/news")  Aktualności 
         li 
           a(href="/stats")  Stats
+        li 
+          a(href="/crm")  CRM
     div(class='change-motive')
       ul
         li(class="female-link") 
