--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -196,7 +196,7 @@ body .main-nav ul li {
   padding: 5px;
 }
 
-body .main-nav ul li:nth-child(7) {
+body .main-nav ul li:nth-child(5) {
   border-right: none;
 }
 
@@ -1390,4 +1390,73 @@ body .calcFV .fv-class--just-sales {
 body .calcFV .fv-class--extra-line {
   border-bottom: 2px solid #463735;
   padding-bottom: 15px;
+}
+
+body .login-crm {
+  position: fixed;
+  top: 55%;
+  left: 53%;
+  transform: translate(-50%, -50%);
+  background-color: lemonchiffon;
+  height: 350px;
+  width: 320px;
+  text-align: center;
+  padding: 20px;
+  border-radius: 10px;
+  font-family: 'Anton', sans-serif;
+}
+
+body .login-crm__title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 75px;
+  margin: 10px 0;
+  font-size: 35px;
+}
+
+body .login-crm__title span {
+  display: block;
+}
+
+body .login-crm__title span:nth-of-type(2) {
+  align-self: flex-start;
+  animation: reserved 5s cubic-bezier(0.68, -0.55, 0.27, 1.55) both infinite;
+}
+
+body .login-crm .form {
+  display: flex;
+  flex-direction: column;
+  font-size: 25px;
+}
+
+body .login-crm input {
+  background-color: lightgrey;
+}
+
+body .login-crm__btn {
+  display: block;
+  font-size: 20px;
+  width: 180px;
+  height: 50px;
+  margin: 25px auto;
+  background-color: #edc176;
+  border: none;
+  border-radius: 5px;
+  letter-spacing: 1px;
+}
+
+@keyframes reserved {
+  0% {
+    transform: rotateY(0deg);
+  }
+  89% {
+    transform: rotateY(0deg);
+  }
+  90% {
+    transform: rotateY(-180deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
 }
