--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1431,7 +1431,7 @@ body .login-crm .form {
 }
 
 body .login-crm input {
-  background-color: lightgrey;
+  background-color: #f5deb1;
 }
 
 body .login-crm__btn {
