--- a/public/stylesheets/parts/crm.scss
+++ b/public/stylesheets/parts/crm.scss
@@ -52,7 +52,66 @@
         border-radius: 5px;
         letter-spacing: 1px;
     }
+
+    .show-about-project {
+        background-color: darksalmon;
+        color: rgb(0, 128, 0)38;
+        font-size: 22px;
+        padding: 5px;
+        border: none;
+        border-radius: 30px;
+        transition: .3s;
+
+        span,
+        i {
+            color: antiquewhite;
+        }
+
+        &:hover {
+            box-shadow: 2px 2px 2px 2px;
+        }
+    }
+
+    .about-project {
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        background-color: #e5fdd0;
+        width: 600px;
+        padding: 20px;
+        transform: translateX(-160px);
+
+        &__title {
+            color: #fc0007;
+            padding-bottom: 10px;
+            border-bottom: 4px solid black;
+        }
+
+        &__description {
+            margin-top: 10px;
+            font-size: 20px;
+            letter-spacing: 2px;
+            line-height: 125%;
+
+
+        }
+
+        &__subtitle {
+            font-size: 25px;
+            color: #fc0007;
+            letter-spacing: 5px;
+        }
+
+        &__list {
+            list-style: inside;
+            text-align: left;
+            font-size: 20px;
+        }
+    }
+
 }
+
+
 
 @keyframes reserved {
     0% {
