--- a/public/stylesheets/parts/crm.css
+++ b/public/stylesheets/parts/crm.css
@@ -30,7 +30,7 @@
   animation: reserved 5s cubic-bezier(0.68, -0.55, 0.27, 1.55) both infinite;
 }
 
-.login-crm .form {
+.login-crm form {
   display: flex;
   flex-direction: column;
   font-size: 25px;
@@ -59,6 +59,7 @@
   padding: 5px;
   border: none;
   border-radius: 30px;
+  cursor: pointer;
   transition: .3s;
 }
 
@@ -73,12 +74,28 @@
 
 .login-crm .about-project {
   position: fixed;
+  display: none;
+  flex-direction: column;
   top: 0px;
   left: 0px;
   background-color: #e5fdd0;
   width: 600px;
   padding: 20px;
   transform: translateX(-160px);
+  border-radius: 5px;
+  box-shadow: 6px 5px 7px 4px;
+}
+
+.login-crm .about-project__close {
+  align-self: flex-end;
+  width: 110px;
+  border: 1px solid black;
+  cursor: pointer;
+  transition: .2s;
+}
+
+.login-crm .about-project__close:hover {
+  letter-spacing: 1px;
 }
 
 .login-crm .about-project__title {
