--- a/public/stylesheets/parts/crm.scss
+++ b/public/stylesheets/parts/crm.scss
@@ -31,7 +31,7 @@
 
     }
 
-    .form {
+    form {
         display: flex;
         flex-direction: column;
         font-size: 25px;
@@ -60,6 +60,7 @@
         padding: 5px;
         border: none;
         border-radius: 30px;
+        cursor: pointer;
         transition: .3s;
 
         span,
@@ -74,12 +75,28 @@
 
     .about-project {
         position: fixed;
+        display: none;
+        flex-direction: column;
         top: 0px;
         left: 0px;
         background-color: #e5fdd0;
         width: 600px;
         padding: 20px;
         transform: translateX(-160px);
+        border-radius: 5px;
+        box-shadow: 6px 5px 7px 4px;
+
+        &__close {
+            align-self: flex-end;
+            width: 110px;
+            border: 1px solid black;
+            cursor: pointer;
+            transition: .2s;
+
+            &:hover {
+                letter-spacing: 1px;
+            }
+        }
 
         &__title {
             color: #fc0007;
