--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1424,7 +1424,7 @@ body .login-crm__title span:nth-of-type(2) {
   animation: reserved 5s cubic-bezier(0.68, -0.55, 0.27, 1.55) both infinite;
 }
 
-body .login-crm .form {
+body .login-crm form {
   display: flex;
   flex-direction: column;
   font-size: 25px;
@@ -1453,6 +1453,7 @@ body .login-crm .show-about-project {
   padding: 5px;
   border: none;
   border-radius: 30px;
+  cursor: pointer;
   transition: .3s;
 }
 
@@ -1467,12 +1468,28 @@ body .login-crm .show-about-project:hover {
 
 body .login-crm .about-project {
   position: fixed;
+  display: none;
+  flex-direction: column;
   top: 0px;
   left: 0px;
   background-color: #e5fdd0;
   width: 600px;
   padding: 20px;
   transform: translateX(-160px);
+  border-radius: 5px;
+  box-shadow: 6px 5px 7px 4px;
+}
+
+body .login-crm .about-project__close {
+  align-self: flex-end;
+  width: 110px;
+  border: 1px solid black;
+  cursor: pointer;
+  transition: .2s;
+}
+
+body .login-crm .about-project__close:hover {
+  letter-spacing: 1px;
 }
 
 body .login-crm .about-project__title {
