--- a/views/crmpanel.pug
+++ b/views/crmpanel.pug
@@ -1,7 +1,8 @@
 extends layout
 
 block content
+   link(rel='stylesheet', href='/stylesheets/modifiers/crmpanel.css')  
    form(method='post')
      button(type='submit' class='logout-btn') Wyloguj
    .crm-panel-wrapper
-     h1(class="crm-panel-wrapper__title") Witaj w swoim panelu :)
+     h1(class="crm-panel-wrapper__title") ZajazdCRM Panel
