--- a/public/stylesheets/parts/crm.css
+++ b/public/stylesheets/parts/crm.css
@@ -123,6 +123,18 @@
   font-size: 20px;
 }
 
+.crm-panel-wrapper {
+  width: 1200px;
+  margin: 0 auto;
+  font-family: 'Anton', sans-serif;
+}
+
+.crm-panel-wrapper__title {
+  text-align: center;
+  padding: 10px;
+  background-color: #f8f0f0;
+}
+
 @keyframes reserved {
   0% {
     transform: rotateY(0deg);
