--- a/public/stylesheets/parts/crm.scss
+++ b/public/stylesheets/parts/crm.scss
@@ -128,7 +128,17 @@
 
 }
 
+.crm-panel-wrapper {
+    width: 1200px;
+    margin: 0 auto;
+    font-family: 'Anton', sans-serif;
 
+    &__title {
+        text-align: center;
+        padding: 10px;
+        background-color: #f8f0f0;
+    }
+}
 
 @keyframes reserved {
     0% {
