Chat in CRM ready :)

--- a/views/crmpanel.pug
+++ b/views/crmpanel.pug
@@ -7,7 +7,8 @@ block content
    .crm-panel-wrapper
      h1(class="crm-panel-wrapper__title") ZajazdCRM Panel
      div(class="chat-container")
-       .chat-container__message-container
+       .chat-container__hide Chat
+       .chat-container__message-container       
        form(method='post' action="/chat" class="send-container")
          input(type="text" class="send-container__input")
          button(type="submit" class="send-container__btn") 
