--- a/public/stylesheets/parts/chat.scss
+++ b/public/stylesheets/parts/chat.scss
@@ -8,6 +8,34 @@
     padding: 10px;
     height: 250px;
     border-radius: 3px;
+    width: 1200px;
+    position: fixed;
+    bottom: -250px;
+    transition: .3s;
+
+    &__hide {
+        position: absolute;
+        top: -55px;
+        right: -25px;
+        border: 2px solid burlywood;
+        text-align: center;
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        line-height: 50px;
+        background: chocolate;
+        cursor: pointer;
+        transition: .3s;
+
+        &:hover {
+            border-color: lime;
+            color: lime;
+        }
+    }
+
+    &__message-container {
+        overflow-y: scroll;
+    }
 
     &__message--Olek {
         color: rgb(221, 221, 150);
