add Ola to users list and add emoji to titles

--- a/public/stylesheets/parts/chat.css
+++ b/public/stylesheets/parts/chat.css
@@ -50,6 +50,10 @@
   color: #a8a6e9;
 }
 
+.chat-container__message--Ola {
+  color: #fa83ea;
+}
+
 .chat-container__message--Kuba {
   color: #dddd96;
 }
