--- a/public/stylesheets/parts/chat.scss
+++ b/public/stylesheets/parts/chat.scss
@@ -49,6 +49,10 @@
         color: rgb(168, 166, 233);
     }
 
+    &__message--Ola {
+        color: rgb(250, 131, 234);
+    }
+
     &__message--Kuba {
         color: rgb(221, 221, 150)
     }
