--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1596,6 +1596,10 @@ body .chat-container__message--Bartek {
   color: #a8a6e9;
 }
 
+body .chat-container__message--Ola {
+  color: #fa83ea;
+}
+
 body .chat-container__message--Kuba {
   color: #dddd96;
 }
