--- a/views/panel.pug
+++ b/views/panel.pug
@@ -5,7 +5,7 @@ block content
     button(type='submit' class='logout-btn') Wyloguj  
   div(class='wrapper')
     h3 Ofertomat v. 3.1.2   
-    p(class="alert alert-success wrapper__title") Wersja 3.1.2 liczy auto od września.   
+    p(class="alert alert-success wrapper__title") Wersja 3.1.3 liczy auto od października.   
     button(class="btn btn-dark show-price-change") Edycja cen 
     div
       button(class="btn btn-info show-calc-wear") Przelicz zużycie  
