--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,7 +13,7 @@ body {
   height: 100vh;
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background: url("../images/bora.jpg");
+  background: url("../images/autumn.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -1622,4 +1622,60 @@ body .chat-container .send-container__btn {
   border: none;
   border-radius: 2px;
   letter-spacing: 2px;
+}
+
+body .ripple-container {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+body .ripple-container__btn {
+  border: none;
+  display: inline-block;
+  position: relative;
+  padding: 12px 36px;
+  margin: 10px 0;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 18px;
+  letter-spacing: 2px;
+  border-radius: 40px;
+  background: linear-gradient(90deg, #0162c8, #55e7fc);
+  overflow: hidden;
+  transition: .5s;
+}
+
+body .ripple-container__btn:hover {
+  box-shadow: 1px 1px 2px 2px plum;
+}
+
+body .ripple-container__btn--second {
+  background: linear-gradient(90deg, #755bea, #ff7260);
+}
+
+body .ripple-container__ripple {
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  background: #fff;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  border-radius: 50%;
+  animation: rippleAnimate 1s linear infinite;
+}
+
+@keyframes rippleAnimate {
+  0% {
+    width: 0px;
+    height: 0px;
+    opacity: 0.5;
+  }
+  100% {
+    width: 500px;
+    height: 500px;
+    opacity: 0;
+  }
 }
