clear /models, /routes, and app.js

--- a/views/panel.pug
+++ b/views/panel.pug
@@ -4,8 +4,8 @@ block content
   form(method='post')
     button(type='submit' class='logout-btn') Wyloguj  
   div(class='wrapper')
-    h3 Ofertomat v. 3.1.3   
-    p(class="alert alert-success wrapper__title") Wersja 3.1.3 liczy auto od października.   
+    h3 Ofertomat v. 3.1.4       
+    p(class="alert alert-success wrapper__title") Wersja 3.1.4 liczy auto od listopada.   
     button(class="btn btn-dark show-price-change") Edycja cen 
     div
       button(class="btn btn-info show-calc-wear") Przelicz zużycie  
