--- a/views/parts/b21.pug
+++ b/views/parts/b21.pug
@@ -1,6 +1,9 @@
 - var dataNumber = 6
 .extra-tariff-wrapper.tariffb21-wrapper
-      p(class="tariff-wrapper-title-main") B21         
+      p(class="tariff-wrapper-title-main") B21  
+      div
+        label Cena 2022r.
+        input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2023)       
       div
         label Cena 2022r.
         input(type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2022)
