--- a/views/parts/changec22b.pug
+++ b/views/parts/changec22b.pug
@@ -2,6 +2,17 @@
 h3(class="change-price-heading") Dla C22b:
 .wrap-change-price-c22a
          .wrap-all-in-tariff
+          .year2023-wrapper 
+            p(class="tariff-wrapper-title") 2023 r. 
+            div
+              label Średnia 
+              input(name="pricec22b2023Avr" type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2023.avr)
+            div
+              label I strefa 
+              input(name="pricec22b2023First" type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2023.first)
+            div
+              label II strefa
+              input(name="pricec22b2023Second" type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2023.second)
           .year2022-wrapper 
             p(class="tariff-wrapper-title") 2022 r. 
             div
