--- a/views/ofertomat.pug
+++ b/views/ofertomat.pug
@@ -4,8 +4,8 @@ block content
   form(method='post')
     button(type='submit' class='logout-btn') Wyloguj  
   div(class='wrapper')
-    h3 Ofertomat v. 3.1.4       
-    p(class="alert alert-success wrapper__title") Wersja 3.1.4 liczy auto od listopada.   
+    h3 Ofertomat v. 4.0       
+    p(class="alert alert-success wrapper__title") Wersja 4.0 Uwzględnia rok 2023, auto od listopada.   
     button(class="btn btn-dark show-price-change") Edycja cen 
     div
       button(class="btn btn-info show-calc-wear") Przelicz zużycie  
@@ -37,6 +37,7 @@ block content
     div
       label(for="endOfAgreement") Koniec umowy: 
       select(id="endOfAgreement")
+        option(class="option-2021" value=2021) 2022
         option(class="option-2021" value=2021) 2021
         option(class="option-2020" value=2020) 2020
         option(class="option-2019" value=9999) 9999     
