--- a/views/parts/changeb22.pug
+++ b/views/parts/changeb22.pug
@@ -2,6 +2,17 @@
 h3(class="change-price-heading") Dla B22:
 .wrap-change-price-c22a
          .wrap-all-in-tariff
+          .year2023-wrapper 
+            p(class="tariff-wrapper-title") 2023 r. 
+            div
+              label Średnia 
+              input(name="priceb222023Avr" type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2023.avr)
+            div
+              label I strefa 
+              input(name="priceb222023First" type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2023.first)
+            div
+              label II strefa
+              input(name="priceb222023Second" type="text" placeholder="np. 300" value=data[dataNumber].tariff.price2023.second)
           .year2022-wrapper 
             p(class="tariff-wrapper-title") 2022 r. 
             div
