--- a/views/parts/changec11.pug
+++ b/views/parts/changec11.pug
@@ -1,6 +1,9 @@
 h3(class="change-price-heading") Dla C11:
        .wrap-change-price-c11
         div
+          label(for="idPrice2023") Cena na 2022:
+          input(id="idPrice2023" type="text" name="price2022" value=data[0].tariff.price2023)
+        div
           label(for="idPrice2022") Cena na 2022:
           input(id="idPrice2022" type="text" name="price2022" value=data[0].tariff.price2022)
         div
