--- a/views/parts/changec12b.pug
+++ b/views/parts/changec12b.pug
@@ -1,6 +1,17 @@
 h3(class="change-price-heading") Dla C12b:
 .wrap-change-price-c12b
         .wrap-all-in-tariff
+          .year2023-wrapper 
+            p(class="tariff-wrapper-title") 2023 r. 
+            div
+              label Średnia 
+              input(id="priceC12b2022AvrChange" type="text" name="pricec12b2023Avr" placeholder="np. 300" value=data[2].tariff.price2023.avr)
+            div
+              label I strefa 
+              input(id="priceC12b2023FirstChange" type="text" name="pricec12b2023First" placeholder="np. 300" value=data[2].tariff.price2023.first)
+            div
+              label II strefa
+              input(id="priceC12b2023SecondChange" type="text" name="pricec12b2023Second" placeholder="np. 300" value=data[2].tariff.price2023.second)
           .year2022-wrapper 
             p(class="tariff-wrapper-title") 2022 r. 
             div
