--- a/views/parts/changecb21.pug
+++ b/views/parts/changecb21.pug
@@ -2,6 +2,9 @@
 h3(class="change-price-heading") Dla B21:
        .wrap-change-price-c11
         div
+          label(for="idPrice2023") Cena na 2023:
+          input(type="text" name="b21price2023" value=data[dataNumber].tariff.price2023)
+        div
           label(for="idPrice2022") Cena na 2022:
           input(type="text" name="b21price2022" value=data[dataNumber].tariff.price2022)
         div
