--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -30,6 +30,10 @@ body {
 
     }
 
+    .login-header {
+        font-size: 2rem;
+    }
+
     .logout-btn {
         position: fixed;
         top: 5px;
