--- a/public/stylesheets/parts/_calc.scss
+++ b/public/stylesheets/parts/_calc.scss
@@ -14,7 +14,8 @@
     padding: 20px;
     border: 3px solid black;
     box-shadow: 4px 4px black;
-    font-size: 20px;
+    font-size: 17px;
+    font-weight: bolder;
     font-family: Arial, sans-serif;
 
     @include mq('xsmall') {
@@ -27,6 +28,7 @@
         box-shadow: none;
         border: 1px solid black;
         border-radius: 10px;
+        font-size: 15px;
     }
 
     &__title {
@@ -61,9 +63,14 @@
     }
 
     input {
-        font-size: 20px;
+        font-size: 18px;
         text-align: center;
         width: 100px;
+
+        @include mq('xsmall') {
+            font-size: 17px;
+            width: 70px;
+        }
     }
 
     p {
@@ -179,6 +186,7 @@
         display: flex;
         justify-content: space-around;
 
+        .year2023-wrapper,
         .year2022-wrapper,
         .year2021-wrapper,
         .year2020-wrapper {
