--- a/public/stylesheets/parts/_rippleBtn.css
+++ b/public/stylesheets/parts/_rippleBtn.css
@@ -1,8 +1,14 @@
 .ripple-container {
-  margin-top: 30px;
+  margin-top: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media (max-width: 640px) {
+  .ripple-container {
+    margin-top: 0px;
+  }
 }
 
 .ripple-container__btn {
