--- a/public/stylesheets/parts/_rippleBtn.scss
+++ b/public/stylesheets/parts/_rippleBtn.scss
@@ -1,9 +1,14 @@
+@import './breakepoints';
+
 .ripple-container {
-    margin-top: 30px;
+    margin-top: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
 
+    @include mq('xsmall') {
+        margin-top: 0px;
+    }
 
     &__btn {
         border: none;
