--- a/views/ofertomat.pug
+++ b/views/ofertomat.pug
@@ -128,13 +128,12 @@ block content
        div(class="change-price-close")
          img(src="./images/close_cross.png", alt="") 
 
-  script(src="/javascripts/energaCalc.js")   
-  script(src="/javascripts/smallparts/add35zlinfo.js")
-  script(src="/javascripts/smallparts/changepricepanel.js")
-  script(src="/javascripts/smallparts/changetariffs.js")  
-  script(src="/javascripts/smallparts/setToZero.js")
-  script(src="/javascripts/tariffEngine.js")  
-  //- script(src="/javascripts/babelTest.js")
-  script(src="/javascripts/smallparts/calcSavings.js")
-  script(src="/javascripts/smallparts/calcWear.js")
+  //- script(src="/javascripts/energaCalc.js")    
+  //- script(src="/javascripts/smallparts/changepricepanel.js")
+  //- script(src="/javascripts/smallparts/changetariffs.js")  
+  //- script(src="/javascripts/smallparts/setToZero.js")
+  //- script(src="/javascripts/tariffEngine.js")  
+  script(src="/javascripts/babbleTest.js")
+  //- script(src="/javascripts/smallparts/calcSavings.js")
+  //- script(src="/javascripts/smallparts/calcWear.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js" integrity="sha384-NaWTHo/8YCBYJ59830LTz/P4aQZK1sS0SneOgAvhsIl3zBu8r9RevNg5lHCHAuQ/" crossorigin="anonymous")
