work on helper with prices input. script is getting prices from table in good way, need to set it to appropriate inputs

--- a/public/stylesheets/parts/_calc.scss
+++ b/public/stylesheets/parts/_calc.scss
@@ -46,7 +46,7 @@
     }
 
     .show-price-change {
-        display: none;
+        display: block;
 
         @include mq('xsmall') {
             display: none;
