helper works with one sphere

--- a/views/parts/changeb11.pug
+++ b/views/parts/changeb11.pug
@@ -1,9 +1,9 @@
 - var dataNumber = 8
 h3(class="change-price-heading") Dla B11:
-       .wrap-change-price-c11
+       .wrap-change-price-b11
         div
           label(for="idPrice2023") Cena na 2022:
-          input(type="text" name="b11price2022" value=data[dataNumber].tariff.price2023)
+          input(type="text" name="b11price2023" value=data[dataNumber].tariff.price2023)
         div
           label(for="idPrice2022") Cena na 2022:
           input(type="text" name="b11price2022" value=data[dataNumber].tariff.price2022)
