--- a/views/parts/changeb22.pug
+++ b/views/parts/changeb22.pug
@@ -1,6 +1,6 @@
 - var dataNumber = 7
 h3(class="change-price-heading") Dla B22:
-.wrap-change-price-c22a
+ .wrap-change-price-b22
          .wrap-all-in-tariff
           .year2023-wrapper 
             p(class="tariff-wrapper-title") 2023 r. 
