--- a/views/parts/changec22b.pug
+++ b/views/parts/changec22b.pug
@@ -1,6 +1,6 @@
 - var dataNumber = 5
 h3(class="change-price-heading") Dla C22b:
-.wrap-change-price-c22a
+ .wrap-change-price-c22b
          .wrap-all-in-tariff
           .year2023-wrapper 
             p(class="tariff-wrapper-title") 2023 r. 
