--- a/views/parts/changecb21.pug
+++ b/views/parts/changecb21.pug
@@ -1,6 +1,6 @@
 - var dataNumber = 6
 h3(class="change-price-heading") Dla B21:
-       .wrap-change-price-c11
+       .wrap-change-price-b21
         div
           label(for="idPrice2023") Cena na 2023:
           input(type="text" name="b21price2023" value=data[dataNumber].tariff.price2023)
