--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -334,7 +334,7 @@ body .wrapper {
 }
 
 body .wrapper .show-price-change {
-  display: block;
+  display: none;
 }
 
 @media (max-width: 640px) {
@@ -343,8 +343,27 @@ body .wrapper .show-price-change {
   }
 }
 
+body .wrapper .easy-prices {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 220px;
+  border-bottom: 3px solid brown;
+  border-top: 3px solid brown;
+}
+
+body .wrapper .easy-prices select {
+  width: 150px;
+}
+
+body .wrapper .easy-prices input {
+  width: 300px;
+}
+
 body .wrapper h3 {
-  font-family: 'Metal Mania', cursive;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bolder;
   text-align: center;
   color: #4148ae;
   text-shadow: 1px 1px #d5e8c2;
