--- a/views/ofertomat.pug
+++ b/views/ofertomat.pug
@@ -4,8 +4,8 @@ block content
   form(method='post')
     button(type='submit' class='logout-btn') Wyloguj  
   div(class='wrapper')
-    h3 Ofertomat v. 4.0       
-    p(class="alert alert-success wrapper__title") Wersja 4.0 Uwzględnia rok 2023, auto od listopada.   
+    h3 Ofertomat v. 4.0.1       
+    p(class="alert alert-success wrapper__title") Wersja 4.0.1 Uwzględnia rok 2023, auto liczy od listopada, ceny są podwyższone o 1.5%  
     button(class="btn btn-dark show-price-change") Edycja cen 
     div
       button(class="btn btn-info show-calc-wear") Przelicz zużycie  
@@ -129,7 +129,7 @@ block content
           option(value="b21") B21
           option(value="b22") B22
         input(type="text" class="easy-prices__input")
-        button(class="easy-prices__btn") Wgraj ceny
+        button(class="easy-prices__btn btn btn-info") Wgraj ceny
       form(action="panel/change-price/" method="post")
        include parts/changec11.pug
        include parts/changec12a.pug
