--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -609,6 +609,10 @@ body .wrapper .calc-wear {
   }
 }
 
+body .wrapper .calc-wear__par strong {
+  color: brown;
+}
+
 body .wrapper .calc-wear__hide {
   max-width: 30px;
   font-size: 20px;
