--- a/views/ofertomat.pug
+++ b/views/ofertomat.pug
@@ -4,8 +4,8 @@ block content
   form(method='post')
     button(type='submit' class='logout-btn') Wyloguj  
   div(class='wrapper')
-    h3 Ofertomat v. 4.0.1       
-    p(class="alert alert-success wrapper__title") Wersja 4.0.1 Uwzględnia rok 2023, auto liczy od listopada, ceny są podwyższone o 1.5%  
+    h3 Ofertomat v. 4.1.1       
+    p(class="alert alert-success wrapper__title") Wersja 4.1.1 - uwzględnia rok 2023, auto od listopada, ceny podwyższone o 1.5%, precyzyjne liczenie zużycia  
     button(class="btn btn-dark show-price-change") Edycja cen 
     div
       button(class="btn btn-info show-calc-wear") Przelicz zużycie  
@@ -13,7 +13,11 @@ block content
     .calc-wear
       div(class="calc-wear__hide")
         i(class="fas fa-minus-circle")
-      p(class="calc-wear__par") Podaj dane wprost z faktury (w kWh), program poda Ci zużycie roczne w mWh. Kalkulator zakłada, że mamy do czynienia z fakturą miesięczną. W wypadku dwumiesięcznej podziel wynik na 2.
+      p(class="calc-wear__par") Podaj dane wprost z faktury (w kWh), program poda Ci zużycie roczne w mWh. Bazowo  program zakłada fakturę za 30 dni. Jeżeli jest inna - 
+        strong skoryguj!
+      div
+        label Faktura za dni:
+        input(class="calc-wear__input calc-wear__input--days" value=30)
       div
         label I strefa:
         input(class="calc-wear__input calc-wear__input--first-sphere" value=0)
