edit note to crm plus factor9999 change to 0.08

--- a/views/ofertomat.pug
+++ b/views/ofertomat.pug
@@ -4,8 +4,8 @@ block content
   form(method='post')
     button(type='submit' class='logout-btn') Wyloguj  
   div(class='wrapper')
-    h3 Ofertomat v. 4.2       
-    p(class="alert alert-success wrapper__title") Wersja 4.2 - uwzględnia rok 2023, auto od listopada, ceny podwyższone o 1.5%, precyzyjne liczenie zużycia, określanie do kiedy nowa umowa.  
+    h3 Ofertomat v. 4.2.1       
+    p(class="alert alert-success wrapper__title") Wersja 4.2.1 - auto od grudnia
     button(class="btn btn-dark show-price-change") Edycja cen 
     div
       button(class="btn btn-info show-calc-wear") Przelicz zużycie  
